       with other template extension, because the defult template file extension
       is ``.html``. For example::
    
            def index():
                response.template = 'index.ahtml'
                return {}
       
       Above code will override the default template filename from ``index.html``
       to ``index.ahtml``.

0.1.2 Version
-----------------

#. Fix permission tag, and change PERMISSION definitions in settings.ini, now the 
   PERMISSION definition can use dict datatype, just like::

    [PERMISSION]
    PERM = {'name':'PERM', 'roles':['a', 'b'], 'description':'PERM}

   and with this method, you don't need to define ROLES_PERMISSIONS section
#. Add TransactionMiddle as default settings in ORM settings.ini. By default, if 
   you add 'uliweb.contrib.orm', the transaction middleware will automatically 
   enabled. In the previous version, you should add this middleware yourself.
#. Add app arguments to exportstatic command
#. Remove --with-static option of export command, so default behavior is export
   static folder
#. Fix default file_serving process, add x_filename process, in order to make
   alt filename support processing correctly.
#. Add -m option to find command, so you can use::

    uliweb find -m model_name
    
   to find the model is defined in which model
#. Add manytomany parameter to Model.delete() function, so it'll automatically 
   delete manytomany relationships.
#. Add tables app to uliweb.
#. Add GenericReference and GenericRalation support
#. Add BigIntegerProperty support, the shorthand is Field(BIGINT)
#. Add __pk_type__ variable, current is 'int', others will be 'biginteger',
   you can use set_pk_type(name) to switch it, also add PKTYPE() function, you
   can use Field(PKTYPE()) to create ForeignKey Property according the option,
   in web project, you can swith it via ORM/PK_TYPE 
#. Add delete_fieldname parameter to Model.delete(), so if you pass True, it'll