@@ -40,6 +40,9 @@ Uliweb Change Log
        
        Above code will override the default template filename from ``index.html``
        to ``index.ahtml``.
+#. Add Redirect support. Redirect is an exception, and also add Redirect support
+   in middle_session. Because Redirect is an exception, so it'll implement process_exception
+   and save the session also.
 
 0.1.2 Version
 -----------------
